@@ -3,6 +3,8 @@ Version: 2.8.4
 Date: ????
   Minor features:
     - Hidden project surface names from remote view surface list.
+  Bugfixes:
+    - Fixed returning to a project/stage at the same position you left it, in more cases.
 ---------------------------------------------------------------------------------------------------
 Version: 2.8.3
 Date: 2025-11-11
